# PJToDo

./: .gitignore  README.md  Rust in iOS.key  ToDo.db  ToDo.sketch  to_do.sql  to_do_tag.sql  to_do_type.sql
FFI Demo/RustToSwift/int_demo_lib/: Cargo.toml  build.rs
FFI Demo/RustToSwift/int_demo_lib/src/: lib.rs
PJToDo/Rust/pj_to_do_corelib/: Cargo.toml  bindings.h  build.rs  cbindgen.toml
PJToDo/Rust/pj_to_do_corelib/src/: lib.rs  main.rs
PJToDo/Rust/pj_to_do_corelib/src/c_binding_extern/: c_binding_extern.rs  mod.rs
PJToDo/Rust/pj_to_do_corelib/src/common/: mod.rs  pj_compress.rs  pj_logger.rs  pj_model_utils.rs  pj_serialize.rs  pj_utils.rs  request_config.rs
PJToDo/Rust/pj_to_do_corelib/src/common/manager/: mod.rs  pj_file_manager.rs  pj_repos_file_manager.rs  pj_repos_manager.rs  pj_user_manager.rs
PJToDo/Rust/pj_to_do_corelib/src/common/utils/: mod.rs  pj_utils.rs
PJToDo/Rust/pj_to_do_corelib/src/controllers/: mod.rs  to_do_controller.rs  to_do_search_controller.rs  to_do_settings_controller.rs  to_do_sync_github_data_controller.rs  to_do_tag_controller.rs  to_do_type_controller.rs
PJToDo/Rust/pj_to_do_corelib/src/db/: mod.rs
PJToDo/Rust/pj_to_do_corelib/src/db/dao/: mod.rs  to_do_dao.rs  to_do_settings_dao.rs  to_do_tag_dao.rs  to_do_type_dao.rs
PJToDo/Rust/pj_to_do_corelib/src/db/dao/dao_impl/: mod.rs  to_do_dao_impl.rs  to_do_settings_dao_impl.rs  to_do_tag_dao_impl.rs  to_do_type_dao_impl.rs
PJToDo/Rust/pj_to_do_corelib/src/db/pj_db_connection_util/: mod.rs  pj_database.rs  pj_db_connection_util.rs
PJToDo/Rust/pj_to_do_corelib/src/db/tables/: schema.rs
PJToDo/Rust/pj_to_do_corelib/src/delegates/: mod.rs  to_do_delegate.rs  to_do_download_file_delegate.rs  to_do_file_delegate.rs  to_do_http_request_delegate.rs  to_do_settings_delegate.rs  to_do_settings_file_delegate.rs  to_do_sync_github_data_delegate.rs  to_do_tag_delegate.rs  to_do_tag_file_delegate.rs  to_do_type_delegate.rs  to_do_type_file_delegate.rs
PJToDo/Rust/pj_to_do_corelib/src/init/: init.rs
PJToDo/Rust/pj_to_do_corelib/src/mine/: authorizations.rs  mod.rs  todo_settings.rs  user.rs
PJToDo/Rust/pj_to_do_corelib/src/network/: http_repos_file_request.rs  http_repos_file_request_extern.rs  http_repos_request.rs  http_repos_request_extern.rs  http_request.rs  http_user_request.rs  http_user_request_extern.rs  mod.rs
PJToDo/Rust/pj_to_do_corelib/src/pal/: mod.rs  pj_db_pal.rs  pj_to_do_pal.rs  pj_user_pal_help.rs
PJToDo/Rust/pj_to_do_corelib/src/repos/: repos.rs  repos_content.rs  repos_file.rs
PJToDo/Rust/pj_to_do_corelib/src/service/: mod.rs  to_do_service.rs  to_do_tag_service.rs  to_do_type_service.rs
PJToDo/Rust/pj_to_do_corelib/src/service/service_delegate/: mod.rs  to_do_tag_service_delegate.rs
PJToDo/Rust/pj_to_do_corelib/src/service/service_impl/: mod.rs  to_do_service_impl.rs  to_do_type_service_impl.rs
PJToDo/Rust/pj_to_do_corelib/src/service/service_view_model/: mod.rs  to_do_type_service_view_model.rs
PJToDo/Rust/pj_to_do_corelib/src/to_do/: mod.rs  to_do.rs  to_do_insert_set.rs  to_do_query_set.rs
PJToDo/Rust/pj_to_do_corelib/src/to_do_tag/: to_do_tag.rs
PJToDo/Rust/pj_to_do_corelib/src/to_do_type/: mod.rs  to_do_type.rs
PJToDo/Rust/pj_to_do_corelib/src/view_models/: mod.rs  to_do_type_view_model.rs
PJToDo/Rust/pj_to_do_corelib/tests/: tests.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/: Cargo.toml  build.rs  cbindgen.toml  get_xcode_var_pal_path.sh  rustfmt.toml
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/: app_pal_bindings.rs  lib.rs  main.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/c_binding_extern/: c_binding_extern.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/common/: mod.rs  pj_logger.rs  pj_serialize.rs  request_config.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/common/manager/: pj_file_manager.rs  pj_repos_file_manager.rs  pj_repos_manager.rs  pj_user_manager.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/common/utils/: pj_utils.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/controllers/: mod.rs  to_do_controller.rs  to_do_search_controller.rs  to_do_settings_controller.rs  to_do_tag_controller.rs  to_do_type_controller.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/db/dao/: to_do_dao.rs  to_do_settings_dao.rs  to_do_tag_dao.rs  to_do_type_dao.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/db/pj_db_connection_util/: mod.rs  (+2 more)
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/delegates/: to_do_delegate.rs  to_do_http_request_delegate.rs  to_do_search_delegate.rs  to_do_settings_delegate.rs  to_do_tag_delegate.rs  to_do_type_delegate.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/init/: init.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/mine/: authorizations.rs  todo_settings.rs  user.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/network/: http_repos_file_request.rs  http_repos_file_request_extern.rs  http_repos_request.rs  http_repos_request_extern.rs  http_request.rs  http_user_request.rs  http_user_request_extern.rs  mod.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/pal/: pj_to_do_pal.rs  pj_user_pal_help.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/repos/: mod.rs  repos.rs  repos_content.rs  repos_file.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/service/: to_do_service.rs  to_do_settings_service.rs  to_do_tag_service.rs  to_do_type_service.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/to_do/: to_do.rs  to_do_insert_set.rs  to_do_query_set.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/to_do_tag/: mod.rs  to_do_tag.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/src/to_do_type/: to_do_type.rs
PJToDo/iOS/PJToDoCoreLib/PJToDoCoreLib/Rust/pj_to_do_corelib/tests/: pj_test.rs
(+241 files in other folders)
