[package]
name = "pj_to_do_corelib"
version = "0.1.0"
authors = ["Zoey Weng <zoey.weng@ringcentral.com>"]
description = "Example static library project built for iOS"
build = "build.rs"
autotests = false

# include = [
#   "Cargo.toml",
#   "LICENSE",
#   "src/**/*"
# ]

[dependencies]

# ****** C ******
libc = "0.2.58"
cc = "1.0.83"

# ****** NetWork ******
bytes = "1.5.0"
futures = "0.3.29"
native-tls = "0.2"
hyper = "0.12.11"
hyper-tls = "0.3.1"
tokio-io = "0.1"
tokio = "1.35.0"

# ****** Sqlite : ORM ******
diesel = { version = "1.3.3", features = ["sqlite"] }

# ****** Json ******
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
# serde_json = { version = ">=0.8.0, <2.0", optional = true }

# ****** Log ******
log = "0.4.5"

# ****** Base64 ******
rustc-serialize = "0.3.24"

# ****** Zip ******
# brotli = "2.5.1"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }

# ****** Time ******
chrono = "0.4"

[dependencies.lazy_static]
version = "1.1.0"

# ****** CC ******
[build-dependencies]
cc = "1.0.83"
# bindgen = "0.69.1"

[features]
type_name = [] # feature has no explicit dependencies

[lib]
crate-type = ["staticlib"]
# crate-type = ["staticlib", "cdylib", "dylib"]
# crate-type = ["staticlib"]
name = "pj_to_do_corelib"

[profile.release]
lto = true

[[test]]
name = "tests"
