[package]
name = "pj_to_do_corelib"
version = "0.1.0"
authors = ["Zoey Weng <zoey.weng@ringcentral.com>"]
description = "Example static library project built for iOS"
build = "build.rs"
autotests = false
edition = "2021"

# include = [
#   "Cargo.toml",
#   "LICENSE",
#   "src/**/*"
# ]

[dependencies]

# ****** C ******
libc = "0.2.58"
cc = "1.0.83"

# ****** NetWork ******
bytes = "1.5.0"
futures = "0.3.29"
native-tls = "0.2.11"
hyper = { version = "1.1.0", features = ["client"] }
hyper-tls = "0.6.0"
http-body-util = "0.1"
hyper-util = { version = "0.1.2", features = ["full"] }
tokio-io = "0.1.13"
tokio = { version = "1.35.1", features = ["full"] }

# ****** Sqlite : ORM ******
diesel = { version = "1.3.3", features = ["sqlite"] }

# ****** Json ******
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
# serde_json = { version = ">=0.8.0, <2.0", optional = true }

# ****** Log ******
log = "0.4.5"

# ****** Base64 ******
rustc-serialize = "0.3.24"

# ****** Zip ******
# brotli = "2.5.1"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }

# ****** Time ******
chrono = "0.4"

[dependencies.lazy_static]
version = "1.1.0"

# ****** CC ******
[build-dependencies]
cc = "1.0.83"
# bindgen = "0.69.1"
hyper-tls = "0.6.0"

[features]
type_name = [] # feature has no explicit dependencies

[lib]
crate-type = ["staticlib"]
# crate-type = ["staticlib", "cdylib", "dylib"]
# crate-type = ["staticlib"]
name = "pj_to_do_corelib"

# ****** Optimize staticlib size ******
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[[test]]
name = "tests"
